- add ImageDescription function

--- a/AzureFunctionsDemos/CognitiveServicesAzureFunctions/CognitiveServicesAzureFunctions.csproj
+++ b/AzureFunctionsDemos/CognitiveServicesAzureFunctions/CognitiveServicesAzureFunctions.csproj
@@ -4,9 +4,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.13" />
+    <PackageReference Include="Microsoft.ProjectOxford.Vision" Version="1.0.393" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
