--- a/AzureFunctionsDemos/CognitiveServicesAzureFunctions/CognitiveServicesAzureFunctions.csproj
+++ b/AzureFunctionsDemos/CognitiveServicesAzureFunctions/CognitiveServicesAzureFunctions.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.13" />
+    <PackageReference Include="Microsoft.ProjectOxford.Face" Version="1.4.0" />
     <PackageReference Include="Microsoft.ProjectOxford.Vision" Version="1.0.393" />
   </ItemGroup>
   <ItemGroup>
